--- a/CSS-notes.css
+++ b/CSS-notes.css
@@ -30,6 +30,7 @@ body {
 }
 
 /* RESPONSIVE DESIGN */
+
 /* types of Media Queries*/
 @media (min-width: 500px){
 	body {
@@ -98,4 +99,39 @@ body {
 	width: clamp(200px, 40%, 500px);
 	width: min();
 	width: max();
+}
+
+/* ASPECT RATIO */
+.container {
+	height: 500px;
+	aspect-ratio: 1 / 1;
+}
+
+/* INSET */
+.container {
+	inset: 0;
+	/* top, right, bottom, left = 0 */
+}
+
+/* OBJECT FIT */
+img {
+	object-fit: cover;
+}
+
+/* ANGLES CONTAINER WITH BAVCKGROUND COLOR */
+.section {
+    position: relative;
+    height: 200px;
+    border: 1px solid black;
+    margin: 1rem 0;
+    isolation: isolate;
+}
+
+.section::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    transform: skewY(-5deg);
+    background: linear-gradient(45deg, rgb(255, 45, 45), rgb(37, 37, 255), rgb(59, 255, 59));
 }
