--- a/CSS/CSS-notes.css
+++ b/CSS/CSS-notes.css
@@ -99,7 +99,7 @@ GRID
 
 .box {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); or auto-fill
 	grid-auto-rows: 1fr;
 }
 
